--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main_index.css">
     <title>Realme-6pro</title>
+    <style>
+        @media (max-width:800px){
+            body{
+                display:none;
+                color:red;
+                background-color:red;
+            }
+    </style>
+        
 </head>
 <body>
     <video autoplay muted loop id="myVideo">
